# onvif-viewer

./: .gitignore  out.ts  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md
.github/workflows/: release.yml
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/plugins/: vuetify.ts
frontend/src/stores/: camera.ts
frontend/src/types/: camera.ts
frontend/src/views/: HomeView.vue
openspec/: config.yaml
openspec/changes/improve-preview-audio-and-source-switching/: design.md  proposal.md  tasks.md
openspec/changes/improve-preview-audio-and-source-switching/specs/live-preview/: spec.md
openspec/specs/camera-diagnostics/: spec.md
openspec/specs/camera-discovery/: spec.md
openspec/specs/camera-library/: spec.md
openspec/specs/live-preview/: spec.md
openspec/specs/onvif-stream-access/: spec.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: camera.rs  commands.rs  discovery.rs  lib.rs  main.rs  models.rs  storage.rs  stream.rs
