[package]
name = "onvif-viewer"
version = "0.1.0"
edition = "2021"
description = "ONVIF Camera Preview Tool"

[lib]
name = "onvif_viewer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
oxvif = "0.8"
url = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
axum = "0.7"
async-stream = "0.3"
